Reset after breaking repos by using on Windows

--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -1,41 +1,3 @@
-@article{stgenreg,
-  title={stgenreg: A Stata package for general parametric survival analysis},
-  author={Crowther, Michael J and Lambert, Paul C},
-  journal={Journal of Statistical Software},
-  volume={53},
-  pages={1--17},
-  year={2013}
-}
-
-@article{stpm2,
-  title={Further development of flexible parametric models for survival analysis},
-  author={Lambert, Paul C and Royston, Patrick},
-  journal={Stata Journal},
-  volume={9},
-  number={2},
-  pages={265},
-  year={2009}
-}
-
-@article{reid:cox:conversation,
-  title={A conversation with Sir David Cox},
-  author={Reid, Nancy},
-  journal={Statistical Science},
-  pages={439--455},
-  year={1994},
-  publisher={JSTOR}
-}
-
-@article{latimer2013survival,
-  title={Survival analysis for economic evaluations alongside clinical trials—extrapolation with patient-level data inconsistencies, limitations, and a practical guide},
-  author={Latimer, Nicholas R},
-  journal={Medical Decision Making},
-  volume={33},
-  number={6},
-  pages={743--754},
-  year={2013},
-  publisher={SAGE Publications}
-}
 
 @Book{kalbfleisch:prentice,
   author =	 {Kalbfleisch, J. D. and Prentice, R. L.},
@@ -141,30 +103,32 @@
   OPTannote = 	 {}
 }
 
-@Manual{eha,
-    title = {eha: Event History Analysis},
-    author = {Göran Broström},
-    year = {2014},
-    note = {R package version 2.4-1},
-    url = {http://CRAN.R-project.org/package=eha},
+@article{stpm:update,
+  title={Flexible parametric alternatives to the Cox model: update},
+  author={Royston, Patrick},
+  journal={The Stata Journal},
+  volume={4},
+  number={1},
+  pages={98--101},
+  year={2004}
 }
 
-@article{yee:wild,
-  title={Vector generalized additive models},
-  author={Yee, Thomas W and Wild, CJ},
-  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
-  pages={481--493},
-  year={1996},
-  publisher={JSTOR}
+@article{stpm:orig,
+  title={Flexible parametric alternatives to the Cox model, and more},
+  author={Royston, Patrick},
+  journal={Stata Journal},
+  volume={1},
+  number={1},
+  pages={1--28},
+  year={2001}
 }
 
-@article{actudistns,
-  title={A new R package for actuarial survival models},
-  author={Nadarajah, S and Bakar, SAA},
-  journal={Computational Statistics},
-  volume={28},
-  number={5},
-  pages={2139--2160},
-  year={2013},
-  publisher={Springer}
+@article{stpm2,
+  title={Further development of flexible parametric models for survival analysis},
+  author={Lambert, Paul C and Royston, Patrick},
+  journal={Stata Journal},
+  volume={9},
+  number={2},
+  pages={265},
+  year={2009}
 }
