--- a/TODO
+++ b/TODO
@@ -21,3 +21,7 @@ hHsurvspline: vectorise as dp
 
 relate my gg pars to stata
 gamma is q
+
+intervals in Surv are open on left, closed on right
+
+other types of status: interval,interval2 or mstate
