--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -1,3 +1,42 @@
+@article{stgenreg,
+  title={stgenreg: A Stata package for general parametric survival analysis},
+  author={Crowther, Michael J and Lambert, Paul C},
+  journal={Journal of Statistical Software},
+  volume={53},
+  pages={1--17},
+  year={2013}
+}
+
+@article{reid:cox:conversation,
+  title={A conversation with Sir David Cox},
+  author={Reid, Nancy},
+  journal={Statistical Science},
+  pages={439--455},
+  year={1994},
+  publisher={JSTOR}
+}
+
+@article{latimer2013survival,
+  title={Survival analysis for economic evaluations alongside clinical trials—extrapolation with patient-level data inconsistencies, limitations, and a practical guide},
+  author={Latimer, Nicholas R},
+  journal={Medical Decision Making},
+  volume={33},
+  number={6},
+  pages={743--754},
+  year={2013},
+  publisher={SAGE Publications}
+}
+
+@Misc{therneau:survival,
+  OPTkey = 	 {},
+  author =	 {Therneau, T.},
+  title =	 {A Package for Survival Analysis in S},
+  howpublished = {R package version 2.37-7. \url{http://CRAN.R-project.org/package=survival}},
+  OPTmonth = 	 {},
+  year =	 {2014},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
 
 @Book{kalbfleisch:prentice,
   author =	 {Kalbfleisch, J. D. and Prentice, R. L.},
@@ -131,4 +170,83 @@
   number={2},
   pages={265},
   year={2009}
+}
+
+
+
+@Article{kalbfleisch:lawless,
+  author = 	 {Kalbfleisch, J.D. and Lawless, J.F.},
+  title = 	 {The Analysis of Panel Data under a {M}arkov Assumption},
+  journal = 	 {Journal of the American Statistical Association},
+  year = 	 {1985},
+  OPTkey = 	 {},
+  volume =	 {80},
+  number =	 {392},
+  pages =	 {863-871},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+
+@Article{putter:mstate,
+  author = 	 {Putter, H. and Fiocco, M. and Geskus, R. B.},
+  title = 	 {{Tutorial in biostatistics: competing risks and multi-state models}},
+  journal = 	 sim,
+  year = 	 {2007},
+  OPTkey = 	 {},
+  volume =	 {26},
+  OPTnumber = 	 {},
+  pages =	 {2389-2430},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@article{mstate:cmpb,
+  title={The \texttt{mstate} package for estimation and prediction in non-and semi-parametric multi-state and competing risks models},
+  author={de Wreede, L.C. and Fiocco, M. and Putter, H.},
+  journal={Computer Methods and Programs in Biomedicine},
+  volume={99},
+  number={3},
+  pages={261--274},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{mstate:jss,
+  title={\texttt{mstate}: an R package for the analysis of competing risks and multi-state models},
+  author={de Wreede, L. C. and Fiocco, M. and Putter, H.},
+  journal={J Stat Softw},
+  volume={38},
+  pages={1--30},
+  year={2011}
+}
+
+@Manual{eha,
+    title = {eha: Event History Analysis},
+    author = {Göran Broström},
+    year = {2014},
+    note = {R package version 2.4-1},
+    url = {http://CRAN.R-project.org/package=eha},
+}
+
+@article{yee:wild,
+  title={Vector generalized additive models},
+  author={Yee, Thomas W and Wild, CJ},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  pages={481--493},
+  year={1996},
+  publisher={JSTOR}
+}
+
+@article{actudistns,
+  title={A new R package for actuarial survival models},
+  author={Nadarajah, S and Bakar, SAA},
+  journal={Computational Statistics},
+  volume={28},
+  number={5},
+  pages={2139--2160},
+  year={2013},
+  publisher={Springer}
 }
