--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -281,3 +281,26 @@
   year={2007},
   publisher={Wiley Online Library}
 }
+
+@Article{mueller:wang,
+  author = 	 {Mueller, H. G. and Wang, J. L.},
+  title = 	 {Hazard rates estimation under
+     random censoring with varying kernels and bandwidths},
+  journal = 	 {Biometrics},
+  year = 	 {1994},
+  OPTkey = 	 {},
+  volume =	 {50},
+  OPTnumber =	 {},
+  pages =	 {61-76},
+  month =	 {March},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+  @Manual{muhaz,
+    title = {muhaz: Hazard Function Estimation in Survival Analysis},
+    author = {S original by Kenneth Hess and R port by R. Gentleman},
+    year = {2010},
+    note = {R package version 1.2.5},
+    url = {http://CRAN.R-project.org/package=muhaz},
+  }
